--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "axios": "^1.7.5",
     "next": "14.2.7",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nookies": "^2.0.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
