--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "@nextui-org/react": "^1.0.0-beta.13",
+     "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "@types/node": "^20",
