--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "motorez-front",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.13",
+    "@svgr/webpack": "^8.0.1",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.5",
     "next": "14.2.7",
     "nookies": "^2.5.2",
@@ -16,8 +20,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-select": "^5.8.0",
-    "@nextui-org/react": "^1.0.0-beta.13",
-     "sweetalert2": "^11.7.3"
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "@types/node": "^20",
